# SLAM-ASR-Encoder-Pruning-LoRA

./: .gitignore  LICENSE  README.md  eval.py  pyproject.toml  train.py
configs/whisper_largev2/danish/eval/: baseline.yaml  baseline_lora.yaml
configs/whisper_largev2/danish/train/: baseline.yaml  baseline_lora.yaml
configs/whisper_medium/danish/eval/: baseline.yaml  baseline_lora.yaml
configs/whisper_medium/danish/train/: baseline.yaml  baseline_lora.yaml
configs/whisper_small/danish/eval/: baseline.yaml  baseline_lora.yaml
configs/whisper_small/danish/train/: baseline.yaml  baseline_lora.yaml
datamodule/: dataset.py  download_data.py  hf_data.py  preprocess_data.py
models/: encoder.py  model.py  projector.py
scripts/: download_dataset.py  run_sequential_evals.py  run_sequential_training.py
utils/: compute_utils.py  log_config.py  metrics.py  preprocessing.py  train_utils.py  utils.py  wand_config.py
